Bugfix GoldaufhebenAktion. Starkes Refactoring der BewegenAktion